FIX | Graphic overflow

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -14,6 +14,7 @@ body {
   line-height: 26px;
   color: #D9D9D9;
   background: #151515;
+  overflow-x: clip;
 }
 
 a {
